# python-project-50

./: Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: python-app.yml
difference_calculator/: cmd_gendiff.py  file1.json  pars.py
difference_calculator/formatting/: json_format.py  plain_format.py
difference_calculator/gendiff/: gendiff.py  generate_diff.py
difference_calculator/parser/: parser.py
difference_calculator/renderers/: json.py  standart.py
difference_calculator/scripts/: entry.py  gendiff.py
difference_calculator/tests/: test_gen.py  test_gendiff.py  test_json_format.py  test_plain_format.py
difference_calculator/tests/fixtures/: fail_test_json_format.json  failure_test.yaml  hexlet_test.yml  plain_test.txt
gendiff/: __init__.py  cli.py  diff_finder.py  gendiff.py  generate_diff.py  parser.py
gendiff/gendiff/: gendiff.py
gendiff/renderers/: diff_finder.py  json.py  plain.py  standart.py  stylish.py
gendiff/scripts/: entry_point.py  gendiff.py
tests/: test_gendiff.py  test_json_format.py  test_parser.py  test_plain_format.py
tests/fixtures/: failure_test.yaml  plain_failure_test.txt  test_failure_json.json  test_json.json
